[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sequencer/Timeline.gd" type="Script" id=1]
[ext_resource path="res://Sequencer/AudioClip.gd" type="Script" id=2]
[ext_resource path="res://Sequencer/Sequencer.gd" type="Script" id=3]
[ext_resource path="res://Sequencer/Prompter.gd" type="Script" id=4]
[ext_resource path="res://Sequencer/beat.gd" type="Script" id=5]
[ext_resource path="res://Sequencer/Scrub.gd" type="Script" id=6]
[ext_resource path="res://Sequencer/ClipScroller.gd" type="Script" id=7]
[ext_resource path="res://Songs/brand_new_test.wav" type="AudioStream" id=8]
[ext_resource path="res://UI/default_theme.tres" type="Theme" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 909.5, 32 )

[sub_resource type="SegmentShape2D" id=2]
b = Vector2( 0, 64 )

[node name="sequencer" type="Control"]
script = ExtResource( 3 )
stream = ExtResource( 8 )

[node name="AudioStreamInput" type="AudioStreamPlayer" parent="."]

[node name="ClipScroller" type="Container" parent="."]
margin_left = 40.0
margin_top = 394.0
margin_right = 1860.0
margin_bottom = 458.0
rect_min_size = Vector2( 1820, 64 )
script = ExtResource( 7 )

[node name="Prompter" type="Container" parent="ClipScroller"]
margin_top = -239.0
margin_right = 1820.0
margin_bottom = -49.0
rect_clip_content = true
mouse_filter = 2
script = ExtResource( 4 )

[node name="card" type="Container" parent="ClipScroller/Prompter"]
margin_right = 1820.0
margin_bottom = 200.0
rect_min_size = Vector2( 1820, 200 )
script = ExtResource( 1 )
scrub_rect_path = NodePath("../../ClipContainer/Scrub/ScrubRect")
small_play_head_path = NodePath("../../ClipContainer/PlayHead")
small_hover_head_path = NodePath("../../ClipContainer/HoverHead")

[node name="clip" type="ColorRect" parent="ClipScroller/Prompter/card"]
margin_right = 1820.0
margin_bottom = 192.0
rect_min_size = Vector2( 0, 192 )
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
active = false

[node name="BigPlayHead" type="ColorRect" parent="ClipScroller/Prompter/card"]
margin_right = 1.0
margin_bottom = 190.0
mouse_filter = 2
color = Color( 1, 0, 0, 1 )

[node name="BigScrub" type="ColorRect" parent="ClipScroller/Prompter/card"]
margin_right = 1.0
margin_bottom = 190.0
mouse_filter = 2
color = Color( 0.494118, 0.494118, 0.494118, 1 )

[node name="BigBeats" type="Control" parent="ClipScroller/Prompter/card"]
margin_right = 1.0
margin_bottom = 64.0

[node name="ClipContainer" type="Control" parent="ClipScroller"]
margin_right = 1820.0
margin_bottom = 64.0
rect_min_size = Vector2( 1820, 64 )
mouse_filter = 2

[node name="AudioClip" type="ColorRect" parent="ClipScroller/ClipContainer"]
margin_right = 1820.0
margin_bottom = 64.0
rect_min_size = Vector2( 1820, 64 )
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
timeScale = 512

[node name="Scrub" type="Control" parent="ClipScroller/ClipContainer"]
script = ExtResource( 6 )

[node name="ScrubRect" type="ColorRect" parent="ClipScroller/ClipContainer/Scrub"]
margin_right = 1820.0
margin_bottom = 64.0
color = Color( 0.403922, 0.403922, 0.403922, 0.47451 )

[node name="col" type="Area2D" parent="ClipScroller/ClipContainer/Scrub/ScrubRect"]

[node name="shape" type="CollisionShape2D" parent="ClipScroller/ClipContainer/Scrub/ScrubRect/col"]
position = Vector2( 910.5, 32 )
shape = SubResource( 1 )

[node name="LeftScrub" type="ColorRect" parent="ClipScroller/ClipContainer/Scrub"]
margin_top = -8.0
margin_right = 16.0
margin_bottom = 76.0
rect_scale = Vector2( -1, 1 )
color = Color( 0.172549, 1, 0, 1 )

[node name="RightScrub" type="ColorRect" parent="ClipScroller/ClipContainer/Scrub"]
margin_left = 1820.0
margin_top = -8.0
margin_right = 1836.0
margin_bottom = 76.0
color = Color( 0, 0.156863, 1, 1 )

[node name="PlayHead" type="ColorRect" parent="ClipScroller/ClipContainer"]
margin_right = 1.0
margin_bottom = 64.0
rect_min_size = Vector2( 1, 64 )
mouse_filter = 2
color = Color( 0.972549, 0.113725, 0.0235294, 1 )

[node name="HoverHead" type="ColorRect" parent="ClipScroller/ClipContainer"]
margin_right = 1.0
margin_bottom = 64.0
rect_min_size = Vector2( 1, 64 )
mouse_filter = 2
color = Color( 0.380392, 0.380392, 0.380392, 1 )

[node name="beats" type="Control" parent="ClipScroller/ClipContainer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2

[node name="small" type="ColorRect" parent="ClipScroller/ClipContainer/beats"]
margin_right = 1.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0.5, 0 )
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
script = ExtResource( 5 )

[node name="num" type="Label" parent="ClipScroller/ClipContainer/beats/small"]
margin_right = 24.0
margin_bottom = 52.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 9 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/line_spacing = -48
custom_constants/shadow_offset_y = 3
custom_constants/shadow_as_outline = 2
text = "0"

[node name="col" type="StaticBody2D" parent="ClipScroller/ClipContainer/beats/small"]

[node name="shape" type="CollisionShape2D" parent="ClipScroller/ClipContainer/beats/small/col"]
shape = SubResource( 2 )

[connection signal="beat" from="." to="ClipScroller" method="_on_sequencer_beat"]
[connection signal="mouse_entered" from="ClipScroller" to="ClipScroller" method="_on_ClipScroller_mouse_entered"]
[connection signal="mouse_exited" from="ClipScroller" to="ClipScroller" method="_on_ClipScroller_mouse_exited"]
[connection signal="item_rect_changed" from="ClipScroller/Prompter/card" to="ClipScroller" method="_on_card_item_rect_changed"]
[connection signal="mouse_entered" from="ClipScroller/Prompter/card" to="ClipScroller" method="_on_card_mouse_entered"]
[connection signal="mouse_entered" from="ClipScroller/Prompter/card" to="ClipScroller/Prompter/card" method="_on_card_mouse_entered"]
[connection signal="mouse_exited" from="ClipScroller/Prompter/card" to="ClipScroller" method="_on_card_mouse_exited"]
[connection signal="mouse_exited" from="ClipScroller/Prompter/card" to="ClipScroller/Prompter/card" method="_on_card_mouse_exited"]
[connection signal="col_enter" from="ClipScroller/ClipContainer/Scrub" to="ClipScroller/Prompter/card" method="_on_Scrub_col_enter"]
[connection signal="col_exit" from="ClipScroller/ClipContainer/Scrub" to="ClipScroller/Prompter/card" method="_on_Scrub_col_exit"]
[connection signal="item_rect_changed" from="ClipScroller/ClipContainer/Scrub" to="ClipScroller/ClipContainer/Scrub" method="_on_Scrub_item_rect_changed"]
[connection signal="rect_changed" from="ClipScroller/ClipContainer/Scrub" to="ClipScroller/Prompter/card" method="_on_Scrub_rect_changed"]
[connection signal="scrub_changed" from="ClipScroller/ClipContainer/Scrub" to="ClipScroller/Prompter/card" method="_on_Scrub_scrub_changed"]
[connection signal="item_rect_changed" from="ClipScroller/ClipContainer/Scrub/ScrubRect" to="ClipScroller/ClipContainer/Scrub" method="_on_ScrubRect_item_rect_changed"]
[connection signal="mouse_entered" from="ClipScroller/ClipContainer/Scrub/ScrubRect" to="ClipScroller/ClipContainer/Scrub" method="_on_ScrubRect_mouse_entered"]
[connection signal="mouse_exited" from="ClipScroller/ClipContainer/Scrub/ScrubRect" to="ClipScroller/ClipContainer/Scrub" method="_on_ScrubRect_mouse_exited"]
[connection signal="body_entered" from="ClipScroller/ClipContainer/Scrub/ScrubRect/col" to="ClipScroller/ClipContainer/Scrub" method="_on_col_body_entered"]
[connection signal="body_exited" from="ClipScroller/ClipContainer/Scrub/ScrubRect/col" to="ClipScroller/ClipContainer/Scrub" method="_on_col_body_exited"]
[connection signal="mouse_entered" from="ClipScroller/ClipContainer/Scrub/LeftScrub" to="ClipScroller/ClipContainer/Scrub" method="_on_LeftScrub_mouse_entered"]
[connection signal="mouse_exited" from="ClipScroller/ClipContainer/Scrub/LeftScrub" to="ClipScroller/ClipContainer/Scrub" method="_on_LeftScrub_mouse_exited"]
[connection signal="mouse_entered" from="ClipScroller/ClipContainer/Scrub/RightScrub" to="ClipScroller/ClipContainer/Scrub" method="_on_RightScrub_mouse_entered"]
[connection signal="mouse_exited" from="ClipScroller/ClipContainer/Scrub/RightScrub" to="ClipScroller/ClipContainer/Scrub" method="_on_RightScrub_mouse_exited"]
